--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -3,5 +3,7 @@
   "setupTasks": [],
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
-  "tasks": {}
+  "tasks": {
+  "runAtStart": true
+  }
 }
