--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "mit",
   "scripts": {
     "dev": "next dev",
+    "dev:https": "next dev --experimental-https",
     "build": "cross-env BUILD_MODE=standalone next build",
     "start": "next start",
     "lint": "next lint",
@@ -20,29 +21,38 @@
     "@aws-sdk/s3-request-presigner": "^3.414.0",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@hello-pangea/dnd": "^16.5.0",
-    "@langchain/community": "^0.0.20",
-    "@langchain/core": "^0.1.17",
-    "@langchain/openai": "^0.0.12",
+    "@langchain/cohere": "^0.0.7",
+    "@langchain/community": "0.0.49",
+    "@langchain/openai": "0.0.28",
+    "@langchain/pinecone": "^0.0.4",
     "@next/third-parties": "^14.1.0",
+    "@pinecone-database/pinecone": "^2.2.0",
+    "@qdrant/js-client-rest": "^1.8.2",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
-    "axios": "^1.4.0",
+    "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.12",
+    "d3-dsv": "2",
     "duck-duck-scrape": "^2.2.4",
-    "emoji-picker-react": "^4.5.15",
+    "emoji-picker-react": "^4.9.2",
     "encoding": "^0.1.13",
+    "epub2": "^3.0.2",
     "fuse.js": "^7.0.0",
     "html-entities": "^2.4.0",
     "html-to-image": "^1.11.11",
     "html-to-text": "^9.0.5",
     "https-proxy-agent": "^7.0.2",
-    "langchain": "^0.1.6",
+    "md5": "^2.3.0",
+    "langchain": "0.1.33",
+    "mammoth": "^1.7.1",
     "mermaid": "^10.6.1",
+    "mime": "^4.0.1",
     "nanoid": "^5.0.3",
     "next": "^13.4.9",
     "node-fetch": "^3.3.1",
-    "openai": "^4.6.0",
+    "officeparser": "^4.0.8",
+    "openai": "^4.28.4",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,15 +64,18 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sass": "^1.59.2",
+    "sharp": "^0.33.3",
     "spark-md5": "^3.0.2",
+    "srt-parser-2": "^1.2.3",
     "use-debounce": "^9.0.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "1.5.7",
+    "@tauri-apps/cli": "1.5.11",
     "@types/html-to-text": "^9.0.1",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.14",
+    "@types/md5": "^2.3.5",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.7",
     "@types/react-katex": "^3.0.0",
     "@types/spark-md5": "^3.0.4",
@@ -70,7 +83,7 @@
     "eslint": "^8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^3.0.2",
@@ -78,6 +91,9 @@
     "webpack": "^5.88.1"
   },
   "resolutions": {
-    "lint-staged/yaml": "^2.2.2"
-  }
+    "lint-staged/yaml": "^2.2.2",
+    "@langchain/core": "0.1.58",
+    "openai": "4.35.0"
+  },
+  "packageManager": "yarn@1.22.19"
 }
