--- a/.env.template
+++ b/.env.template
@@ -4,18 +4,18 @@ OPENAI_API_KEY=sk-xxxx
 # Access password, separated by comma. (optional)
 CODE=your-password
 
-# You can start service behind a proxy
+# You can start service behind a proxy. (optional)
 PROXY_URL=http://localhost:7890
 
 # (optional)
 # Default: Empty
-# Googel Gemini Pro API key, set if you want to use Google Gemini Pro API.
+# Google Gemini Pro API key, set if you want to use Google Gemini Pro API.
 GOOGLE_API_KEY=
 
 # (optional)
 # Default: https://generativelanguage.googleapis.com/
 # Googel Gemini Pro API url without pathname, set if you want to customize Google Gemini Pro API url.
-GOOGLE_BASE_URL=
+GEMINI_BASE_URL=
 
 # Override openai api request base url. (optional)
 # Default: https://api.openai.com
@@ -78,6 +78,14 @@ BILIBILI_COOKIES=
 # Default: Empty
 # Address of the metaprocess server for advanced video processing features (currently music recognition). Leaving this empty will disable them.
 BILIVID_METAPROCESS_SERVER_ADDRESS=
+# Default: Empty
+# To control custom models, use + to add a custom model, use - to hide a model, use name=displayName to customize model name, separated by comma.
+CUSTOM_MODELS=
+
+# (optional)
+# Default: Empty
+# Change default model
+DEFAULT_MODEL=
 
 # anthropic claude Api Key.(optional)
 ANTHROPIC_API_KEY=
@@ -85,10 +93,13 @@ ANTHROPIC_API_KEY=
 ### anthropic claude Api version. (optional)
 ANTHROPIC_API_VERSION=
 
-
-
 ### anthropic claude Api url (optional)
 ANTHROPIC_URL=
 
 ### (optional)
 WHITE_WEBDEV_ENDPOINTS=
+
+# (optional)
+# Default: zh-CN-YunxiNeural
+# voiceName a string with any `ShortName`. A list of all available neural voices can be found [here](https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support#neural-voices). However, it is not limited to neural voices: standard voices can also be used. A list of standard voices can be found [here](https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support#standard-voices)
+EDGE_TTS_VOICE_NAME=
