--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "private": false,
   "license": "mit",
   "scripts": {
-    "dev": "next dev",
-    "dev:https": "next dev --experimental-https",
-    "build": "cross-env BUILD_MODE=standalone next build",
+    "mask": "npx tsx app/masks/build.ts",
+    "mask:watch": "npx watch 'yarn mask' app/masks",
+    "dev": "yarn run mask:watch & next dev",
+    "dev:https": "yarn run mask:watch & next dev --experimental-https",
+    "build": "yarn mask && cross-env BUILD_MODE=standalone next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "cross-env BUILD_MODE=export BUILD_APP=1 next build",
-    "export:dev": "cross-env BUILD_MODE=export BUILD_APP=1 next dev",
-    "app:dev": "yarn tauri dev",
-    "app:build": "yarn tauri build",
+    "export": "yarn mask && cross-env BUILD_MODE=export BUILD_APP=1 next build",
+    "export:dev": "yarn mask:watch & cross-env BUILD_MODE=export BUILD_APP=1 next dev",
+    "app:dev": "yarn mask:watch & yarn tauri dev",
+    "app:build": "yarn mask && yarn tauri build",
     "prompts": "node ./scripts/fetch-prompts.mjs",
     "prepare": "husky install",
     "proxy-dev": "sh ./scripts/init-proxy.sh && proxychains -f ./scripts/proxychains.conf yarn dev"
@@ -22,12 +24,12 @@
     "@fortaine/fetch-event-source": "^3.0.6",
     "@hello-pangea/dnd": "^16.5.0",
     "@langchain/cohere": "^0.0.7",
-    "@langchain/community": "0.0.49",
-    "@langchain/openai": "0.0.28",
+    "@langchain/community": "0.0.57",
     "@langchain/pinecone": "^0.0.4",
     "@next/third-parties": "^14.1.0",
     "@pinecone-database/pinecone": "^2.2.0",
     "@qdrant/js-client-rest": "^1.8.2",
+    "@supabase/supabase-js": "^2.44.2",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
@@ -39,20 +41,21 @@
     "encoding": "^0.1.13",
     "epub2": "^3.0.2",
     "fuse.js": "^7.0.0",
+    "heic2any": "^0.0.4",
     "html-entities": "^2.4.0",
     "html-to-image": "^1.11.11",
     "html-to-text": "^9.0.5",
     "https-proxy-agent": "^7.0.2",
-    "md5": "^2.3.0",
-    "langchain": "0.1.33",
+    "langchain": "0.1.37",
     "mammoth": "^1.7.1",
+    "markdown-to-txt": "^2.0.1",
+    "md5": "^2.3.0",
     "mermaid": "^10.6.1",
     "mime": "^4.0.1",
     "nanoid": "^5.0.3",
-    "next": "^13.4.9",
+    "next": "^14.1.1",
     "node-fetch": "^3.3.1",
     "officeparser": "^4.0.8",
-    "openai": "^4.28.4",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -87,13 +90,14 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^3.0.2",
+    "tsx": "^4.16.0",
     "typescript": "5.2.2",
+    "watch": "^1.0.2",
     "webpack": "^5.88.1"
   },
   "resolutions": {
     "lint-staged/yaml": "^2.2.2",
-    "@langchain/core": "0.1.58",
-    "openai": "4.35.0"
+    "@langchain/core": "0.1.63"
   },
   "packageManager": "yarn@1.22.19"
 }
