--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,9 +1,9 @@
-name: Auto Release
+name: Create Release
 
 on:
   push:
     tags:
-      - v*
+      - 'v*'
 
 jobs:
   release:
@@ -13,15 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create Release
-        id: create_release
+      - name: Get current date
+        id: get_date
+        run: echo "RELEASE_DATE=$(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_ENV
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: ${{ github.ref }} - Release
           body: |
-            New version!
-            - Tag: ${{ github.ref }}
-            - Release Date: ${{ github.event.head_commit.timestamp }}
+            ## What's New
+            This release includes new features and improvements.
+
+            **Release Date:** ${{ env.RELEASE_DATE }}
+          files: |
+            path/to/source_code.zip
+            path/to/source_code.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
