[v2.15.0] Fix and dall-e model chat

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-entities": "^2.4.0",
     "html-to-image": "^1.11.11",
     "html-to-text": "^9.0.5",
+    "idb-keyval": "^6.2.1",
     "https-proxy-agent": "^7.0.2",
     "mammoth": "^1.7.1",
     "markdown-to-txt": "^2.0.1",
