--- a/.env.template
+++ b/.env.template
@@ -101,5 +101,5 @@ WHITE_WEBDEV_ENDPOINTS=
 
 # (optional)
 # Default: zh-CN-YunxiNeural
-# voiceName a string with any `ShortName`. A list of all available neural voices can be found [here](https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support#neural-voices). However, it is not limited to neural voices: standard voices can also be used. A list of standard voices can be found [here](https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support#standard-voices)
+# voiceName a string with any `ShortName`. A list of all available neural voices can be found [here](https://learn.microsoft.com/en-us/azure/ai-services/speech-service/language-support?tabs=tts#neural-voices)
 EDGE_TTS_VOICE_NAME=
