[v2.15.4] Support for rendering closed model providers and changing TTS

--- a/.env.template
+++ b/.env.template
@@ -100,6 +100,6 @@ ANTHROPIC_URL=
 WHITE_WEBDAV_ENDPOINTS=
 
 # (optional)
-# Default: zh-CN-YunxiNeural
+# Default: en-US-AndrewMultilingualNeural
 # voiceName a string with any `ShortName`. A list of all available neural voices can be found [here](https://learn.microsoft.com/en-us/azure/ai-services/speech-service/language-support?tabs=tts#neural-voices)
 EDGE_TTS_VOICE_NAME=
