--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
-    "axios": "^0.26.0",
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "cheerio": "^1.0.0-rc.12",
     "d3-dsv": "2",
     "duck-duck-scrape": "^2.2.4",
@@ -76,7 +77,8 @@
     "spark-md5": "^3.0.2",
     "srt-parser-2": "^1.2.3",
     "use-debounce": "^9.0.4",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "rt-client": "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/js/v0.5.0/rt-client-0.5.0.tgz"
   },
   "devDependencies": {
     "@tauri-apps/api": "^1.6.0",
