--- a/.env.template
+++ b/.env.template
@@ -54,20 +54,29 @@ NEXT_PUBLIC_ENABLE_NODEJS_PLUGIN=1
 # (optional)
 # Default: Empty
 # If you want to enable RAG, set this value to 1.
+# ref: https://github.com/chokiproai/ChatGPT-Plugins/blob/main/docs/rag.md
 ENABLE_RAG=
 
 # (optional)
 # Default: Empty
+# ref: https://github.com/chokiproai/ChatGPT-Plugins/blob/main/docs/rag.md
+SUPABASE_URL=
+
+# (optional)
+# Default: Empty
+# ref: https://github.com/chokiproai/ChatGPT-Plugins/blob/main/docs/rag.md
+SUPABASE_PRIVATE_KEY=
+
+# (optional)
+# Default: Empty
 # Model used when RAG vectorized data.
+# ref: https://github.com/chokiproai/ChatGPT-Plugins/blob/main/docs/rag.md
 RAG_EMBEDDING_MODEL=text-embedding-ada-002
 
-# Configuration is required when turning on RAG.
+# (optional)
 # Default: Empty
-QDRANT_URL=
-
-# Configuration is required when turning on RAG.
-# Default: Empty
-QDRANT_API_KEY=
+# ref: https://github.com/chokiproai/ChatGPT-Plugins/blob/main/docs/rag.md
+OLLAMA_BASE_URL=
 
 # (optional)
 # Default: Empty
