--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "canvas": "^3.0.1",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.0",
     "d3-dsv": "2",
     "duck-duck-scrape": "^2.2.4",
     "emoji-picker-react": "^4.9.2",
