feat: support nano banana

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@langchain/langgraph": "^0.0.33",
     "@langchain/ollama": "^0.0.4",
     "@langchain/openai": "^0.4.4",
+    "@lobehub/icons": "^2.32.0",
     "@next/third-parties": "^14.1.0",
     "@pinecone-database/pinecone": "^2.2.0",
     "@qdrant/js-client-rest": "^1.8.2",
@@ -37,6 +38,7 @@
     "@tavily/core": "^0.3.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
+    "antd": "^5.27.3",
     "axios": "^1.7.5",
     "bufferutil": "^4.0.9",
     "canvas": "^3.0.1",
@@ -61,13 +63,13 @@
     "mermaid": "^10.6.1",
     "mime": "^4.0.1",
     "nanoid": "^5.0.3",
-    "next": "^14.1.1",
+    "next": "^15.5.2",
     "node-fetch": "^3.3.1",
     "officeparser": "^4.0.8",
     "openapi-client-axios": "^7.5.5",
     "pdf-parse": "^1.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "rehype-highlight": "^6.0.0",
