--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "mask": "npx tsx app/masks/build.ts",
     "mask:watch": "npx watch 'yarn mask' app/masks",
-    "dev": "concurrently \"yarn mask:watch\" \"next dev\"",
-    "dev:https": "concurrently \"yarn mask:watch\" \"next dev --experimental-https\"",
-    "build": "yarn mask && cross-env BUILD_MODE=standalone next build",
+    "dev": "concurrently \"yarn mask:watch\" \"next dev --webpack\"",
+    "dev:https": "concurrently \"yarn mask:watch\" \"next dev --experimental-https --webpack\"",
+    "build": "yarn mask && cross-env BUILD_MODE=standalone next build --webpack",
     "start": "next start",
     "lint": "next lint",
-    "export": "yarn mask && cross-env BUILD_MODE=export BUILD_APP=1 next build",
-    "export:dev": "concurrently \"yarn mask:watch\" \"cross-env BUILD_MODE=export BUILD_APP=1 next dev\"",
+    "export": "yarn mask && cross-env BUILD_MODE=export BUILD_APP=1 next build --webpack",
+    "export:dev": "concurrently \"yarn mask:watch\" \"cross-env BUILD_MODE=export BUILD_APP=1 next dev --webpack\"",
     "app:dev": "concurrently \"yarn mask:watch\" \"yarn tauri dev\"",
     "app:build": "yarn mask && yarn tauri build",
     "prompts": "node ./scripts/fetch-prompts.mjs",
@@ -62,7 +62,7 @@
     "mermaid": "^10.6.1",
     "mime": "^4.0.1",
     "nanoid": "^5.0.3",
-    "next": "^15.5.2",
+    "next": "^16.0.7",
     "node-fetch": "^3.3.1",
     "officeparser": "^4.0.8",
     "openapi-client-axios": "^7.5.5",
@@ -104,7 +104,7 @@
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^16.0.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.2.0",
